--- a/README
+++ b/README
@@ -12,3 +12,6 @@ Possible module conversions:
 Problems:
 - When Date Popup is used, related field does not updated with correct data from the database
 - After deleting some content types, SQL query changes and Drush module should be updated to fit these changes.
+
+Notes:
+- There is no need to create taxonomy terms on D7 side, as migration module imports them from D6.
